# sdl_core_v3.6_winceport

./: .gitignore  CMakeLists.txt  README.md
src/appMain/: CMakeLists.txt  life_cycle.cc  life_cycle.h  main.cc  smartDeviceLink.ini
src/components/: CMakeLists.txt
src/components/HMI/: index.html
src/components/HMI/app/: AppViews.js  Flags.js  SDLApp.js  StateManager.js
src/components/HMI/app/controller/: AppController.js  InfoController.js  MediaController.js  PhoneController.js  SettingsController.js
src/components/HMI/app/controlls/: AZERTYLayout.js  Button.js  Label.js  List.js  QWERTYLayout.js  QWERTZLayout.js  ScrollBar.js
src/components/HMI/app/model/: PhoneModel.js
src/components/HMI/app/view/: WarningView.js  homeView.js  infoView.js  mediaView.js  phoneView.js
src/components/HMI/css/: info.css  mcs.css  media.css  phone.css  settings.css
src/components/HMI/ffw/: Framework.js  RPCClient.js  RPCObserver.js
src/components/HMI/locale/: eng.js  locale.js
src/components/application_manager/: CMakeLists.txt
src/components/application_manager/include/application_manager/: application_manager_impl.h  hmi_capabilities.h  message_helper.h  smart_object_keys.h
src/components/application_manager/src/: application_data_impl.cc  application_impl.cc  application_manager_impl.cc  hmi_capabilities.cc  hmi_command_factory.cc  message.cc  message_helper.cc  mobile_command_factory.cc  mobile_message_handler.cc  request_controller.cc  usage_statistics.cc
src/components/application_manager/src/commands/: command_impl.cc  command_notification_impl.cc  command_request_impl.cc  command_response_impl.cc  pending.cc
src/components/application_manager/src/event_engine/: event.cc  event_dispatcher.cc  event_observer.cc
src/components/application_manager/src/policies/: policy_event_observer.cc  policy_handler.cc  policy_retry_sequence.cc  pt_exchange_handler_impl.cc
src/components/config_profile/src/: ini_file.cc  profile.cc
src/components/connection_handler/include/connection_handler/: connection.h  connection_handler_impl.h  device.h
src/components/connection_handler/src/: connection.cc  connection_handler_impl.cc  device.cc  heartbeat_monitor.cc
src/components/formatters/include/formatters/: CSmartFactory.hpp  formatter_json_rpc.h
src/components/formatters/src/: CFormatterJsonBase.cpp  CFormatterJsonSDLRPCv1.cpp  CFormatterJsonSDLRPCv2.cpp  CSmartFactory.cpp  formatter_json_rpc.cc  generic_json_formatter.cc  meta_formatter.cc
src/components/hmi_message_handler/: CMakeLists.txt
src/components/hmi_message_handler/src/: hmi_message_adapter.cc  hmi_message_handler_impl.cc  messagebroker_adapter.cc
src/components/interfaces/: HMI_API.xml  MOBILE_API.xml  v4_protocol_v1_2_no_extra.xml
src/components/media_manager/: CMakeLists.txt
src/components/media_manager/include/media_manager/: media_adapter_impl.h  sharedmem_streamer_adapter.h  socket_streamer_adapter.h
src/components/media_manager/src/: media_adapter_impl.cc  media_manager_impl.cc  pipe_streamer_adapter.cc  sharedmem_streamer_adapter.cc  socket_streamer_adapter.cc  streamer_listener.cc
src/components/media_manager/src/audio/: audio_stream_sender_thread.cc  from_mic_recorder_listener.cc
src/components/media_manager/src/video/: sharedmem_video_streamer_adapter.cc  video_stream_to_file_adapter.cc
src/components/policy/src/policy/: CMakeLists.txt
src/components/policy/test/policy/: CMakeLists.txt
src/components/protocol_handler/src/: protocol_handler_impl.cc  protocol_packet.cc  protocol_payload.cc
src/components/qt_hmi/References/Look/: ImageHardkey.qml  PCA_HMI_v1_0.qml  PCA_HMI_v1_0.qmlproject  TextHardkey.qml
src/components/resumption/src/: last_state.cc
src/components/rpc_base/: CMakeLists.txt
src/components/rpc_base/include/rpc_base/: rpc_base.h  rpc_base_inl.h
src/components/rpc_base/src/rpc_base/: rpc_base.cc
src/components/smart_objects/: CMakeLists.txt
src/components/smart_objects/include/smart_objects/: number_schema_item.h
src/components/smart_objects/src/: always_false_schema_item.cc  always_true_schema_item.cc  array_schema_item.cc  bool_schema_item.cc  enum_schema_item.cc  number_schema_item.cc  object_schema_item.cc  smart_object.cc  smart_schema.cc  string_schema_item.cc
src/components/transport_manager/: CMakeLists.txt
src/components/transport_manager/include/transport_manager/: transport_manager_impl.h
src/components/transport_manager/src/: transport_manager_default.cc  transport_manager_impl.cc
src/components/transport_manager/src/bluetooth/: bluetooth_connection_factory.cc  bluetooth_device.cc  bluetooth_device_scanner.cc  bluetooth_socket_connection.cc  bluetooth_transport_adapter.cc
src/components/transport_manager/src/tcp/: tcp_client_listener.cc  tcp_connection_factory.cc  tcp_device.cc  tcp_socket_connection.cc  tcp_transport_adapter.cc
src/components/transport_manager/src/transport_adapter/: threaded_socket_connection.cc  transport_adapter_impl.cc  transport_adapter_listener_impl.cc
src/components/utils/: CMakeLists.txt
src/components/utils/src/: back_trace.cc  bitstream.cc  conditional_variable_posix.cc  date_time.cc  file_system.cc  global.cc  lock_posix.cc  signals_linux.cc  system.cc
src/thirdPartyLibs/: CMakeLists.txt
src/thirdPartyLibs/MessageBroker/: CMakeLists.txt
src/thirdPartyLibs/MessageBroker/include/: CMessageBroker.hpp  CMessageBrokerRegistry.hpp  mb_controller.hpp
src/thirdPartyLibs/apache-log4cxx-0.10.0/: configure
src/thirdPartyLibs/apache-log4cxx-cmake/: CMakeLists.txt
src/thirdPartyLibs/apr-1.5.0/include/: apr.h
src/thirdPartyLibs/apr-cmake/: CMakeLists.txt
src/thirdPartyLibs/apr-util-1.5.3/crypto/: apr_passwd.c
src/thirdPartyLibs/apr-util-cmake/: CMakeLists.txt
src/thirdPartyLibs/encryption/: CMakeLists.txt
src/thirdPartyLibs/encryption/src/: Base64.cpp
src/thirdPartyLibs/expat-2.1.0/: CMakeLists.txt
src/thirdPartyLibs/libusbx-1.0.16/: CMakeLists.txt  config.h
src/thirdPartyLibs/pthread-win32-2.9.1/: CMakeLists.txt  implement.h  need_errno.h  pthread_win32_attach_detach_np.c
(+500 files in other folders)
